# tele_plan

./: .gitignore  Dockerfile  Procfile  README.md  docker_compose.example.yml  pyproject.toml
.github/workflows/: FUNDING.yml  docker-publish.yml
tele_plan/: tele_plan.py  timetable_entry.py
